add reset code route and fix verify
